--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@nestjs/common": "^10.4.15",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
-    "express": "^4.21.2",
-    "neat-csv": "^7.0.0"
+    "csv-parser": "^3.1.0",
+    "express": "^4.21.2"
   }
 }
